--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     Hello from html page!!
-    <h1>This is my S2I Version 1</h1>
+    <h1>This is my Updated S2I Version 2 </h1>
 </body>
 
 </html>
