--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html>
 
 <head>
-    <title>
-        First Web Page
-    </title>
+    
 </head>
 
 <body>
-    Hello from html page!!
-    <h1>This is my Updated S2I Version 2 </h1>
+   
+    <h1> Hello from Version 1 </h1>
 </body>
 
 </html>
